--- a/src/app/pages/overlay-form/overlay-form.component.html
+++ b/src/app/pages/overlay-form/overlay-form.component.html
@@ -1,20 +1,30 @@
 <form>
   <section class="overlay-header">
     <span class="overlay-header-title">
-      Boletim de Acompanhamento de {{ data.tipo || '-' }}
+      Boletim de Acompanhamento de {{ data.tipo || "-" }}
     </span>
 
     <div class="overlay-header-data">
       <div class="data">
-        <span><strong>DISTRITO SANITÁRIO:</strong> {{ data.distrito || '-' }}</span>
-        <span><strong>MÊS:</strong> {{ data.ciclo || '-' }}</span>
-        <span><strong>UNIDADE DE SAÚDE:</strong> {{ data.unidade || '-' }}</span>
+        <span
+          ><strong>DISTRITO SANITÁRIO:</strong> {{ data.distrito || "-" }}</span
+        >
+        <span><strong>MÊS:</strong> {{ data.ciclo || "-" }}</span>
+        <span
+          ><strong>UNIDADE DE SAÚDE:</strong> {{ data.unidade || "-" }}</span
+        >
       </div>
 
       <div class="data">
-        <span><strong>N° DA NOTIFICAÇÃO ATUAL:</strong> {{ data.nu_notificacao_atual || '-' }}</span>
-        <span><strong>DATA DA NOTIFICAÇÃO ATUAL:</strong> {{ data.dt_notificacao_atual || '-' }}</span>
-        <span><strong>NOME:</strong> {{ data.no_nome_paciente || '-' }}</span>
+        <span
+          ><strong>N° DA NOTIFICAÇÃO ATUAL:</strong>
+          {{ data.nu_notificacao_atual || "-" }}</span
+        >
+        <span
+          ><strong>DATA DA NOTIFICAÇÃO ATUAL:</strong>
+          {{ data.dt_notificacao_atual || "-" }}</span
+        >
+        <span><strong>NOME:</strong> {{ data.no_nome_paciente || "-" }}</span>
       </div>
     </div>
   </section>
@@ -23,52 +33,112 @@
     <div *ngIf="data.tipo === 'tuberculose'">
       <div class="overlay-main-info">
         <span class="title">Forma</span>
-        <span style="text-align: center;">{{ data.tp_forma || '-' }}</span>
+        <span style="text-align: center">{{ data.tp_forma || "-" }}</span>
       </div>
     </div>
 
     <div *ngFor="let column of displayedGridColumns" class="overlay-main-info">
       <span class="title">{{ formatTitle(getDisplayLabel(column)) }}</span>
-    
+
       <ng-container *ngIf="getOptions(column).length > 0; else textInput">
         <select [(ngModel)]="data[column]" name="{{ column }}">
-          <option *ngFor="let option of getOptions(column)" [ngValue]="option.value"
-            [title]="getTooltip(column, option.value)">
+          <option
+            *ngFor="let option of getOptions(column)"
+            [ngValue]="option.value"
+            [title]="getTooltip(column, option.value)"
+          >
             {{ option.label }}
           </option>
         </select>
       </ng-container>
-    
+
       <ng-template #textInput>
         <ng-container *ngIf="column.includes('dt_'); else defaultInput">
-          <div style="position: relative; width: 100%; display: flex; justify-content: center;">
-            <input [matDatepicker]="picker" [(ngModel)]="data[column]" name="{{ column }}"
-              style="width: 50%; height: 36px; text-align: center; background-color: #dddddda6; border-radius: 0.5rem;"
-              (focus)="picker.open()" (click)="picker.open()" />
+          <div
+            style="
+              position: relative;
+              width: 100%;
+              display: flex;
+              justify-content: center;
+            "
+          >
+            <input
+              [matDatepicker]="picker"
+              [(ngModel)]="data[column]"
+              name="{{ column }}"
+              style="
+                width: 50%;
+                height: 36px;
+                text-align: center;
+                background-color: #dddddda6;
+                border-radius: 0.5rem;
+              "
+              (focus)="picker.open()"
+              (click)="picker.open()"
+            />
             <mat-datepicker #picker></mat-datepicker>
           </div>
         </ng-container>
         <ng-template #defaultInput>
-          <input type="text" [(ngModel)]="data[column]" name="{{ column }}" />
+          <input
+            *ngIf="column === 'nu_contato_examinado' || 'nu_contato_registrado' || 'nu_contato'; else generalInput"
+            type="number"
+            [(ngModel)]="data[column]"
+            name="{{ column }}"
+            (keypress)="validateNumberInput($event)"
+            (paste)="validatePasteInput($event)"
+            (input)="preventNegativeValue($event)"
+            style="
+              width: 50%;
+              height: 34px;
+              border: none;
+              border-radius: 0.5rem;
+              text-align: center;
+              background-color: #dddddda6;
+              font-size: 0.6rem;
+              box-sizing: border-box;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            "
+          />
+          <ng-template #generalInput>
+            <input type="text" [(ngModel)]="data[column]" name="{{ column }}" />
+          </ng-template>
         </ng-template>
       </ng-template>
     </div>
   </section>
+
   <div class="overlay-container" [ngClass]="getContainerClass()">
     <section class="overlay-comments">
-        <div class="comment-field">
-            <label>Obs. Distrito</label> 
-            <textarea [maxlength]="data.tipo === 'hanseniase' ? 360 : null" [(ngModel)]="data.obs_distrito" name="obs_distrito"></textarea>
-        </div>
-        <div class="comment-field">
-            <label>Obs. Unidade</label>
-            <textarea [maxlength]="data.tipo === 'hanseniase' ? 360 : null" [(ngModel)]="data.obs_unidade" name="obs_unidade"></textarea>
-        </div>
+      <div class="comment-field">
+        <label>Obs. Distrito</label>
+        <textarea
+          [maxlength]="data.tipo === 'hanseniase' || data.tipo === 'tuberculose' ? 300 : null"
+          [(ngModel)]="data.obs_distrito"
+          name="obs_distrito"
+          [readonly]="!canEditObsDistrito"
+          [ngClass]="{ 'readonly': !canEditObsDistrito }"
+          [style.cursor]="!canEditObsDistrito ? 'not-allowed' : 'text'"
+        ></textarea>
+      </div>
+      <div class="comment-field">
+        <label>Obs. Unidade</label>
+        <textarea
+          [maxlength]="data.tipo === 'hanseniase' || data.tipo === 'tuberculose' ? 300 : null"
+          [(ngModel)]="data.obs_unidade"
+          name="obs_unidade"
+          style="cursor: text"
+        ></textarea>
+      </div>
     </section>
+    
+    
 
     <section class="overlay-buttons">
-        <button class="save-button" (click)="saveChanges()">Salvar</button>
-        <button class="close-button" (click)="closeDialog()">Fechar</button>
+      <button class="save-button" (click)="saveChanges()">Salvar</button>
+      <button class="close-button" (click)="closeDialog()">Fechar</button>
     </section>
-</div>
+  </div>
 </form>
